# tweakio-sdk

./: .gitignore  ChatLoader.py  Extra.py  MessageProcessor.py  OSCG_CONTRIBUTOR_Guidelines.md  OSCG_MENTORS_Guidelines.md  README.md  Reply.py  _Media.py  login.py  pyproject.toml  requirements.txt  setup.py  storage.py  unread_handler.py
RepositoryPattern/Decorators/: Chat_Click_decorator.py
RepositoryPattern/Interfaces/: message_Interface.py  message_processor_interface.py
RepositoryPattern/WhatsApp/: MessageFilter.py  Message_Processor.py
RepositoryPattern/WhatsApp/DefinedClasses/: Message.py
src/BrowserManager/: browserforge_manager.py  camoufox_browser.py
src/Decorators/: Chat_Click_decorator.py
src/Exceptions/: __init__.py  base.py  tweakio_exceptions.py  whatsapp.py
src/FIlter/: message_filter.py
src/Interfaces/: Chat_processor_Interface.py  Humanize_Operation_Interface.py  Media_Capable_Interface.py  Message_Processor_Interface.py  Reply_Capabale_Interface.py  Storage_Interface.py  __init__.py  browser_interface.py  browserforge_capable_interface.py  chat_interface.py  chat_processor_interface.py  humanize_operation_interface.py  media_capable_interface.py  message_interface.py  message_processor_interface.py  reply_capable_interface.py  storage_interface.py
src/StorageDB/: sqlite_db.py
src/WhatsApp/: Chat_Processor.py  Humanized_Opeartions.py  Media.py  Message_Processor.py  Reply.py  chat_processor.py  humanized_operations.py  media_capable.py  message_processor.py  reply_capable.py
src/WhatsApp/DefinedClasses/: Chat.py  Message.py
(+13 files in other folders)
