[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tweakio-whatsapp"
version = "0.1.0"
description = "A powerful WhatsApp automation SDK using Playwright and Camoufox"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Rohit"}  # Matches author in directory.py
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "playwright>=1.40.0",
    "camoufox>=0.3.5",
    "browserforge>=1.0.0",
    "platformdirs>=4.0.0",
    "colorlog>=6.0.0"
]

[project.urls]
"Homepage" = "https://github.com/Start-Tweakio/Tweakio-SDK"  # Assumed based on project name
"Bug Tracker" = "https://github.com/Start-Tweakio/Tweakio-SDK/issues"
